--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -15,4 +15,5 @@ jobs:
         with:
           directory: tests/terraform/runner/resources/plan_rotem
           log_level: DEBUG
+          framework: terraform_plan
 
