--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -16,4 +16,5 @@ jobs:
           directory: tests/terraform/runner/resources/plan_rotem
           log_level: DEBUG
           framework: terraform_plan
+          quiet: false
 
