--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Run Checkov action
         id: checkov
-        uses: bridgecrewio/checkov-action@v12.1151.0
+        uses: bridgecrewio/checkov-action@master
 
         with:
           directory: tests/terraform/runner/resources/plan_rotem
